fix: scroll vertical overflow

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,6 +23,10 @@ body {
 }
 */
 
+html {
+    overflow-y: scroll;
+}
+
 a {
     text-decoration: none;
 }
